--- a/app/styles/Header.css
+++ b/app/styles/Header.css
@@ -485,7 +485,7 @@ header.scrolled .logo {
   }
 
   #main-nav.header-nav {
-    display: none !important;
+    display: none;
     position: absolute !important;
     top: 100% !important;
     left: 0 !important;
